--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "is-empty": "^1.2.0",
     "jade": "~1.11.0",
     "mongoose": "^5.5.8",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "validator": "^11.1.0"
   }
 }
