--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express": "~4.15.5",
     "is-empty": "^1.2.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.8",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
